[gd_scene load_steps=2 format=3 uid="uid://dq6yhsnsjkcqg"]

[ext_resource type="Script" path="res://lp4-1.gd" id="1_vcei0"]

[node name="lp4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vcei0")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 278.0
offset_bottom = 155.0
text = "# of copies to print:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_top = 226.0
offset_right = 1152.0
offset_bottom = 487.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="copies" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 94.0
offset_right = 361.0
offset_bottom = 125.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_top = 522.0
offset_right = 278.0
offset_bottom = 647.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 522.0
offset_right = 684.0
offset_bottom = 647.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 868.0
offset_top = 522.0
offset_right = 1146.0
offset_bottom = 647.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
